fixed modal overflow

--- a/react-app/src/components/Modal/Modal.css
+++ b/react-app/src/components/Modal/Modal.css
@@ -1,12 +1,15 @@
 .overlay {
     position: fixed;
-    width: 100vw;
-    height: 100vw;
-    background-color: rgba(0, 0, 0, .7);
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+
 
 }
 .content {
@@ -14,8 +17,8 @@
     justify-content: space-evenly;
     align-items: center;
     color: white;
-    max-height: 100vh;
-    overflow-y: auto;
+    overflow: auto;
+
 
 }
 .modalContainer {
@@ -24,11 +27,16 @@
     left: 25%;
     background-color:#111;
     width: 50vw;
-    height:100vh;
+    max-height: 80%;
+    overflow: auto;
+
 
 }
 .synopsis {
     width: 70%;
-
+    overflow: auto;
 }
 
+.no-scroll {
+    overflow: hidden;
+}
